--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,65 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+   /* background-image: url(../img/fon.png); */
+    
+   background-image: url(../img/Pozadi.png);
 }
 
 h1{
-    background-color: rgb(12, 37, 122) !important;
-    color: wheat;
+    background-color: #3339eebd  !important;
+    color: #ecdfcf;
     text-align: center;
-}
-div {
-    background-image: url(../img/pozadi.png);
+
   }
 
-  a{
-      background-color: brown;
+  h2{
+    color: #e6c79f;
+    text-shadow: 6px 4px 2px #1c23f3bd ;
+   
   }
+  }
+      /* Add a black background color to the top navigation */
+.topnav {
+    background-color: rgb(209, 39, 39);
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #0a0a0a;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    text-decoration:underline ;
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #383edd;
+    color: rgb(236, 235, 235);
+  }
+
+main{
+  margin-left: auto;
+}
+
+}
+.topnav {
+ 
+
+}
+div .topnav{
+  background-color: #b9bcf8ad ;
+}
+
+
+
+   
