--- a/css/table.css
+++ b/css/table.css
@@ -1,10 +1,14 @@
-table{
+
+table{ 
+    width: 65%;
+    margin-left: 20%;
     border: 1px solid rgb(0, 0, 0);
     border-collapse: separate ;
+    border:  #3339ee83 double 10px; 
+  
 }
-table{ 
-    width: 50%;
-    margin-left: 20%;
+td{
+    vertical-align: top; 
 }
 
 h1{
