--- a/css/table.css
+++ b/css/table.css
@@ -11,9 +11,7 @@ td{
     vertical-align: top; 
 }
 
-h1{
-    background-color: ;
-}
+
 
 dt {
    font-weight: 800;
@@ -21,6 +19,7 @@ dt {
    margin-top: 10px;
    margin-left: 20px;
    color: #3339ee ;
+   text-shadow: 1px 2px rgb(28, 16, 7);
 }
 dd {
     font-style: italic;
@@ -36,4 +35,7 @@ h2{
 }
 dl{
     margin-left: 20%;
+}
+caption{
+    color:  #070c61;
 }
