--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
    /* background-image: url(../img/fon.png); */
     
-   background-image: url("../img/Pozadi.png");
+   background-image: url("../img/pozadi.png");
    height: 100%;
 
    /* Center and scale the image nicely */
